# gst-test

./: CMakeLists.txt  main.cpp
